- SF patch #1516988  Deleting owner of mapped items SF bug #1196724
- SF patch #1517488  Access Bitstreams in Withdrawn Items SF bug #1408373
- SF patch #1490980  Fix for SF bugs #1456311, #1221954  Communities and Collections without name
- included some missing i18n tags
- SF patch #1490891  Submission Step 1 not authorized note and navigation back

(Richard Jones)
- SF bug #1515075. minor build file fix to copy correct config file

1.4 beta 1
==========
(Scott Phillips)
- Rework of DB code to use prepared statements for improved security and performance

(Lieven Droogmans, Ben Bosman)
- SF Patch #1468197 - Filter out mapped items from browse list, fixes bug #1455674 and addresses a symptom of bug #1456553

(Richard Jones)
- SF Patch #1458315 - Customisable Browse Index, fixes bug #1456227

(Robert Tansley)
- UNIQUE constraint applied to schema namespace + short_id (not element).
  Fixed bug SF #1460515.

(Lester Bowser, Robert Tansley)
- Fixes for Oracle database_schema.sql

(Scott Yeadon)
- Fix to QDCCrosswalk so type attribute is not ignored
- SF Patch #1469235 - default language is not applied, fixes bug #1358144 
- Show bundle names on item authorization page
- SF bug #1456540 - incorrect link in list-metadata-fields.jsp
- SF bug #1466268 - Supervisor Orders on Oracle
- SF bug #1456801 - Typo in jsp.tools.confirm-delete-collection.info1
- SF bug #1456586 - typo in Checksum Checker email script
- SF bug #1456988 - database-schema.sql and database-schema_13_14.sql inconsistencies
- update-handle-prefix script changed to also update the metadatavalue table
- SF bug #1456555 - i18n - missing tags
- SF bug #1456533 - dspace.url inconsistency
- SF bug #1456537 - Copyright statement year out of date
- SF bug #1456529 - Subject search in navbar-default.jsp non-XHTML compliant
- SF bug #1456305 - Bitstream Format Registry - Internal and Submitting
- SF bug #1456285 - Search index config and advanced search not in sync